Fixes all violations of DM_NUMBER_CTOR from FindBugs.